--- a/stylesheets/components/_forms.scss
+++ b/stylesheets/components/_forms.scss
@@ -14,8 +14,9 @@ $error_color: lighten($rh-red1, 5%);
 $border_color: lighten($rh-base, 40%);
 $light_border_color: lighten($border_color, 10%);
 
-$aside_text_color: lighten($text_color_2, 40%);
 $placeholder_color: lighten($text_color_2, 55%);
+$note_text_color: lighten($text_color_2, 40%);
+$message_text_color: lighten($text_color_2, 20%);
 
 $disabled_color: lighten($rh-base, 60%);
 $disabled_text_color: lighten($text_color_2, 40%);
@@ -201,11 +202,11 @@ fieldset {
   /* remove placeholder on focus
      (needs to be separate) */
   input:focus::-webkit-input-placeholder {
-    color: $invisible_white_color;
+    color: $transparent_white_color;
   }
 
   input:focus:-moz-placeholder {
-    color: $invisible_white_color;
+    color: $transparent_white_color;
   }
 
   /* required field */
@@ -348,7 +349,7 @@ fieldset {
       width: 13px;
       padding-top: 1px;
       text-align: center;
-      color: $aside_text_color;
+      color: $note_text_color;
       @include text-shadow(0 1px 0 rgba($white_color, 0.8));
       @include border-radius(50%);
       border: 1px solid $light_border_color;
@@ -375,7 +376,7 @@ fieldset {
         width: 0;
         border-style: solid;
         border-width: 0 9px 8px 9px;
-        border-color: $invisible_white_color $invisible_white_color $dark_box_gradient;
+        border-color: $transparent_white_color $transparent_white_color $dark_box_gradient;
         position: absolute;
         bottom: -11px;
         left: -2px;
@@ -420,7 +421,7 @@ fieldset {
   .note {
     display: block;
     font-size: 85%;
-    color: $aside_text_color;
+    color: $note_text_color;
     margin: 0 0 5px 10px;
 
     &:before {
@@ -435,10 +436,10 @@ fieldset {
   .hint,
   .message {
     position: relative;
-    color: $aside_text_color;
+    left: 0;
+    color: $message_text_color;
     padding: 9px $input_padding 7px $input_padding;
     margin-left: 10px;
-    @include opacity(0);
     @include linear_gradient($light_box_color, $light_box_gradient, $light_box_color, 30%);
     @include filter-gradient($light_box_gradient, $light_box_color);
     @include border-radius($border_radius);
@@ -454,7 +455,7 @@ fieldset {
       width: 0;
       border-style: solid;
       border-width: 8px 8px 8px 0;
-      border-color: $invisible_white_color $light_box_color $invisible_white_color;
+      border-color: $transparent_white_color $light_box_color $transparent_white_color;
       position: absolute;
       top: 14px;
       left: -8px;
@@ -470,9 +471,16 @@ fieldset {
   }
 
   .hint {
+    @include opacity(0);
     position: absolute;
     top: 0;
     left: $input_width + $input_padding + 30px;
+
+    &.always_visible {
+      @include opacity(1);
+      position: relative;
+      left: 0;
+    }
   }
 
   .message ~ .hint {
@@ -483,6 +491,10 @@ fieldset {
     @include transition(all 0.29s ease);
     @include opacity(1);
     left: $input_width + $input_padding + 15px;
+
+    &.always_visible {
+      left: 0;
+    }
   }
 
   /* field validations */
@@ -490,38 +502,36 @@ fieldset {
   .warning,
   .error {
     .message {
-      @include opacity(1);
-      left: 0;
-      padding-left: 28px;
-      max-width: $input_width - 18px; // bigger padding
+      padding-left: 29px;
+      max-width: $input_width - 19px; // because of bigger left-padding
     }
   }
 
   /* success message */
   .success .message {
-    color: $green2;
-    background: $light_box_color image-url("converge-ui/icons/success_icon.png") no-repeat 7px 6px; // for IE6-9
+    background: $light_box_color image-url("converge-ui/icons/success_icon.png") no-repeat 8px 6px; // for IE6-9
     @include background(
-      image-url("converge-ui/icons/success_icon.png") no-repeat 7px 6px,
+      image-url("converge-ui/icons/success_icon.png") no-repeat 8px 6px,
       linear-gradient($light_box_gradient, $light_box_color 30%));
+    @include filter-gradient($transparent_white_color, $transparent_white_color);
   }
 
   /* warning message */
   .warning .message {
-    color: $o4;
     background: $light_box_color image-url("converge-ui/icons/warning_icon.png") no-repeat 7px 6px; // for IE6-9
     @include background(
       image-url("converge-ui/icons/warning_icon.png") no-repeat 7px 6px,
       linear-gradient($light_box_gradient, $light_box_color 30%));
+    @include filter-gradient($transparent_white_color, $transparent_white_color);
   }
 
   /* error message */
   .error .message {
-    color: $rh-red1;
     background: $light_box_color image-url("converge-ui/icons/error_icon.png") no-repeat 7px 6px; // for IE6-9
     @include background(
       image-url("converge-ui/icons/error_icon.png") no-repeat 7px 6px,
       linear-gradient($light_box_gradient, $light_box_color 30%));
+    @include filter-gradient($transparent_white_color, $transparent_white_color);
   }
 }
 
@@ -552,7 +562,6 @@ fieldset {
         }
 
         span {
-          display: none;
           left: 60%;;
           top: 27px;
         }
@@ -586,12 +595,8 @@ fieldset {
 
 @mixin messages_bottom {
   & {
-    span:not(.help),
-    .hint {
-      display: block;
-    }
-
     .note {
+      display: block;
       padding: 10px $input_padding 6px $input_padding;
       margin: 0;
       border: 1px solid $light_border_color;
@@ -609,17 +614,22 @@ fieldset {
       border-top-width: 1px;
     }
 
+    .message ~ .hint {
+      display: none;
+    }
+
     .hint,
     .message {
-      left: 0;
+      display: block;
       position: relative;
-      opacity: 1;
+      left: 0;
+      @include opacity(1);
       margin: 3px 0 0 0;
 
       &:before,
       &:after {
         border-width: 0 8px 8px 8px;
-        border-color: $invisible_white_color $invisible_white_color $light_box_gradient;
+        border-color: $transparent_white_color $transparent_white_color $light_box_gradient;
         top: 0;
         left: auto;
         right: 20px;
@@ -628,7 +638,7 @@ fieldset {
       &:after {
         top: -1px;
         left: auto;
-        border-color: $invisible_white_color $invisible_white_color $light_border_color;
+        border-color: $transparent_white_color $transparent_white_color $light_border_color;
       }
 
       &:hover {
@@ -658,10 +668,6 @@ fieldset {
             display: none;
           }
         }
-      }
-
-      input:focus ~ .message {
-        display: block;
       }
     }
   }
@@ -706,6 +712,14 @@ fieldset {
       }
     }
 
+    &.labels_top {
+      .help {
+        span {
+          top: 20px;
+        }
+      }
+    }
+
     .hint,
     .message {
       &:before,
@@ -716,20 +730,18 @@ fieldset {
 
     .hint {
       display: none;
+
+      &.always_visible {
+        display: inline-block;
+      }
     }
 
     .control_group input:focus ~ .hint {
       display: block;
-    }
 
-    .control_group input:focus ~ .message ~ .hint {
-      display: none;
+      &.always_visible {
+        display: inline-block;
+      }
     }
   }
-}
-
-
-
-a{
-  &:focus{outline:0}
 }
